[workspace]
members = [
  "luffa-util",
  "luffa-metrics",
  "luffa-store",
  "luffa-bitswap",
  "luffa-rpc-types",
  "luffa-node",
  "luffa-relay",
  "luffa-process",
  "luffa-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
ahash = "0.8"
aes-gcm = "0.10.1"
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1.57"
async-stream = "0.3.3"
async-broadcast = "0.4.1"
async-channel = "1.7.1"
asynchronous-codec = "0.6"
base64 = "0.20.0"
bincode = "1.3.3"

bs58 = "0.4"
bytecheck = "0.6.7"
bytes = "1.1"
bytesize = "1.1"

cid = "0.9"

keyed_priority_queue = "0.4.1"
lazy_static = "1.4"

clap = "4.0.15"
clap_mangen = "0.2.2"
config = "0.13.1"

console = { version = "0.15", default-features = false }
console-subscriber = "0.1.7"

derive_more = "0.99.17"
deadqueue = "0.2.3"
derivative = "2.2"
sysinfo = "0.27.2"

crc64fast = "1.0.0"
ctrlc = "3.2.2"
crossterm = "0.25"
serde = "1"

fnv = "1.0.7"
futures = "0.3.24"
futures-util = "0.3.21"
git-version = "0.3.5"
hyper = "0.14.23"
hex = "0.4.3"
hex-literal = "0.3.4"

opentelemetry = "0.18"
opentelemetry-otlp = "0.11"
paste = "1.0.9"
prometheus-client = "0.18"
#quic-rpc = { version = "0.3.2", default-features = false }
lru = "0.8"

reqwest = { version = "0.11.10", default-features = false}
rlimit = "0.9.0"


tokio = "1"
tokio-context = "0.1.3"
tokio-stream = "0.1.11"
tokio-test = "0.4.2"
tokio-util = "0.7"

dirs-next = "2"

tracing = "0.1.34"
tracing-opentelemetry = "0.18"
tracing-subscriber = "0.3.14"

tempfile = "3.3"
thiserror = "1"

rand = "0.8.5"
rkyv = "0.7.37"

smallvec = "1.10"
ssh-key = { version = "0.5.1", default-features = false }
serde-error = "0.1.2"
serde_with = "2.1"
serde_cbor = "0.11.2"
sled = "0.34.7"
multibase = "0.9.1"
multihash = "0.17"
libipld = "0.15"

names = { version = "0.14.0", default-features = false }
nix = "0.26"
humansize = "2"
num_enum = "0.5.7"
once_cell = "1.15"
prost = "0.11"
prost-build = "0.11.1"
indicatif = "0.17.1"
libp2p = { version = "0.50", default-features = false }

luffa-util = { version = "0.1.0", path = "./luffa-util" }
luffa-metrics = { version = "0.1.0", path = "./luffa-metrics" }
luffa-rpc-types = { version = "0.1.0", path = "./luffa-rpc-types" }
luffa-bitswap = { version = "0.1.0", path = "./luffa-bitswap" }
luffa-store = { version = "0.1.0", path = "./luffa-store" }
luffa-node = { version = "0.1.0", path = "./luffa-node" }
luffa-process = { version = "0.1.0", path = "./luffa-process" }
unsigned-varint = "0.7.1"
which = "4.3.0"
zeroize = "1.4"
chrono = "0.4.23"
identicon-rs = "4.0.1"
calamine = "0.19.1"
image = "0.24.0"




[profile.optimized-release]
inherits = 'release'
lto = true
debug = false
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false

[profile.docker]
inherits = 'release'
lto = true
debug = false
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false

[workspace.metadata.release]
consolidate-commits = true
