[package]
name = "luffa-bitswap"
version.workspace = true
edition.workspace = true

[build-dependencies]
prost-build.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-broadcast.workspace = true
async-channel.workspace = true
async-trait.workspace = true
async-stream.workspace = true
asynchronous-codec.workspace = true
bytes.workspace = true
cid.workspace = true
deadqueue.workspace = true
derivative.workspace = true
futures.workspace = true
luffa-metrics = { workspace = true, features = ["bitswap"] }
luffa-util.workspace = true
keyed_priority_queue.workspace = true
libp2p = { workspace = true, features = ["ping"] }
multihash.workspace = true
names.workspace = true
num_enum.workspace = true
once_cell.workspace = true
prost.workspace = true
rand.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-context.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
unsigned-varint = { workspace = true, features = ["asynchronous_codec"] }
