[package]
name = "luffa-metrics"
version.workspace = true
edition.workspace = true


[dependencies]
async-trait.workspace = true
config.workspace = true
console-subscriber = { workspace = true, optional = true }
luffa-util.workspace = true
lazy_static.workspace = true
names.workspace = true
opentelemetry = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["tonic"] }
paste.workspace = true
prometheus-client.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2.1"

[dependencies.libp2p]
workspace = true
features = [
  "gossipsub",
  "kad",
  "identify",
  "ping",
  "mdns",
  "noise",
  "yamux",
  "tcp",
  "dns",
  "mplex",
  "serde",
  "metrics",
  "relay",
  "dcutr",
  "autonat",
  "tokio",
] 
optional = true

[features]
store = []
bitswap = []
p2p = ["libp2p"]

# requires setting RUSTFLAGS="--cfg tokio_unstable"
tokio-console = ["tokio/tracing", "console-subscriber"]
