[package]
name = "luffa-node"

version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-trait.workspace = true
async-stream.workspace = true
bytes.workspace = true
bs58.workspace = true
hex.workspace = true
clap = { workspace = true, features = ["derive"] }
cid.workspace = true
config.workspace = true
futures.workspace = true
futures-util.workspace = true
git-version.workspace = true
luffa-util.workspace = true
luffa-store= {workspace = true,features =["node"]}
luffa-metrics = { workspace = true, features = ["p2p"] }
lazy_static.workspace = true
luffa-rpc-types.workspace = true
luffa-bitswap.workspace = true
lru.workspace = true
libipld.workspace = true
multihash.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec.workspace = true
ssh-key = { workspace = true, features = ["ed25519", "std", "rand_core"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "time", "sync", "macros"] }
tokio-stream.workspace = true
# toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zeroize.workspace = true
void = "1.0.2"
petgraph = "0.6.3"
crc64fast.workspace = true
tiny-bip39 = "1.0.0"
chrono.workspace = true

[dependencies.libp2p]
workspace = true
features = [
  "gossipsub",
  "kad",
  "identify",
  "ping",
  "request-response",
  "mdns",
  "noise",
  "yamux",
  "tcp",
  "quic",
  "dns",
  "mplex",
  "serde",
  "metrics",
  "relay",
  "dcutr",
  "autonat",
  "rsa",
  "tokio",
  "macros",
] 
