[package]
name = "luffa-rpc-types"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
aes-gcm.workspace = true
bytes = { workspace = true, features = ["serde"] }
cid = { workspace = true, features = ["serde-codec"] }
derive_more.workspace = true
futures.workspace = true
libp2p = { workspace = true, features = ["serde"] }
quic-rpc.workspace = true
serde.workspace = true
bson.workspace = true
crc64fast.workspace = true
multibase.workspace = true
multihash.workspace = true
serde-error.workspace = true
serde_with.workspace = true
tokio = { workspace = true, default-features = false }

