[package]
name = "luffa-sdk"
version.workspace = true
edition.workspace = true


[lib]
crate-type = ["staticlib","cdylib","lib"]

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
async-trait.workspace = true

bytes.workspace = true
bs58.workspace = true
cid.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
crc64fast.workspace = true
futures.workspace = true
hex.workspace = true
lazy_static.workspace = true
luffa-metrics.workspace = true
luffa-node.workspace = true
luffa-rpc-types.workspace = true
luffa-store = {workspace = true,features = [ "node"]}
luffa-util.workspace = true

multibase.workspace = true
# reqwest = { workspace = true, features = ["rustls-tls"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_cbor.workspace = true
sled.workspace = true
ssh-key = { workspace = true, features = ["ed25519", "std", "rand_core"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
tracing.workspace = true
libp2p = { workspace = true, features = ["gossipsub"] }
uniffi = { version = "0.23.0", features = ["cli"] }
thiserror = "1.0"

futures-lite = "1.12.0"
tantivy = "0.19.2"
tiny-bip39 = "1.0.0"
chrono.workspace = true
identicon-rs.workspace = true
calamine.workspace = true
image.workspace = true
once_cell.workspace = true
base64.workspace = true
rkyv.workspace = true
bytecheck.workspace = true


[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "./src/uniffi-bindgen.rs"

[[bin]]
name = "luffa-client"
path = "./src/main.rs"

[profile.release]
opt-level = "z"
debug = 0
lto = false
panic = "abort"
