[package]
name = "luffa-store"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
ahash.workspace = true
async-trait.workspace = true
async-stream.workspace = true
bytecheck.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
cid.workspace = true
config.workspace = true
ctrlc.workspace = true
futures.workspace = true
git-version.workspace = true
rkyv = { workspace = true, features = ["validation"] }
luffa-util.workspace = true
luffa-rpc-client.workspace = true
luffa-rpc-types.workspace = true
luffa-metrics = { workspace = true, features = ["store"] }
multihash.workspace = true
rocksdb = { version = "0.19", optional = true }
sled = { workspace = true, optional = true}
serde = { workspace = true, features = ["derive"] }
serde_cbor.workspace = true
smallvec = { workspace = true, features = ["write"] }
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true

[features]
default = []
node = ["sled"]
relay = ["rocksdb"]



